Making some code design changes

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -27,15 +27,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# import nltk, emoji, re, string, functools\n",
-    "# import functools, operator\n",
     "from pathlib import Path\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "sys.path.append(os.path.abspath(\"../\"))\n",
     "\n",
-    "from src.data.make_dataset import load_roman_urdu_sentiment_analysis_dataset\n",
-    "from src.features.vectorize_data import tokenizer\n",
+    "sys.path.append(os.path.abspath(\"../\"))\n",
+    "from src.data.make_dataset import (load_roman_urdu_sentiment_analysis_dataset, tokenizer)\n",
     "from src.visualization.visualize import plot_frequency_distribution_of_ngrams\n",
+    "\n",
     "DATA_DIR = os.path.abspath('../data/raw')"
    ]
   },
@@ -43,21 +41,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:4: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
-    "pd.set_option('display.max_colwidth', -1)"
+    "pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((train_comments, train_labels), (test_comments, test_labels)) = load_roman_urdu_sentiment_analysis_dataset(DATA_DIR, 'Roman Urdu DataSet.csv', ['comment', 'sentiment', 'nan'])"
    ]
   },
   {
@@ -122,18 +120,18 @@
       ],
       "text/plain": [
        "                                                                         comment  \\\n",
-       "20087  Yar spelling kesa theek hota wahan ja k bhi                                 \n",
-       "19498  Paen paihay guwach gye ne?? #AchaSorry                                      \n",
-       "19662  Hahaha  teri bhabi hai                                                      \n",
+       "20087                                Yar spelling kesa theek hota wahan ja k bhi   \n",
+       "19498                                     Paen paihay guwach gye ne?? #AchaSorry   \n",
+       "19662                                                     Hahaha  teri bhabi hai   \n",
        "18265  Mujhi cxn eid ty ehyo wathi aiyun ahin sunny wat athai 6k jo aa puro suit   \n",
-       "17240  Kya ye sach hy?                                                             \n",
+       "17240                                                            Kya ye sach hy?   \n",
        "\n",
        "       sentiment  \n",
-       "20087  1          \n",
-       "19498  0          \n",
-       "19662  1          \n",
-       "18265  1          \n",
-       "17240  1          "
+       "20087          1  \n",
+       "19498          0  \n",
+       "19662          1  \n",
+       "18265          1  \n",
+       "17240          1  "
       ]
      },
      "execution_count": 3,
@@ -142,8 +140,17 @@
     }
    ],
    "source": [
-    "df = load_roman_urdu_sentiment_analysis_dataset(DATA_DIR, 'Roman Urdu DataSet.csv', ['comment', 'sentiment', 'nan'])\n",
-    "df.head()"
+    "# df = load_roman_urdu_sentiment_analysis_dataset(DATA_DIR, 'Roman Urdu DataSet.csv', ['comment', 'sentiment', 'nan'])\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = np.concatenate((train_labels, test_labels))"
    ]
   },
   {
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +174,8 @@
     }
    ],
    "source": [
-    "print(f'There are {df.shape[0]} examples in this dataset')"
+    "#print(f'There are {df.shape[0]} examples in this dataset')\n",
+    "print(f'There are {labels.shape[0]} examples in this dataset')"
    ]
   },
   {
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +199,7 @@
     }
    ],
    "source": [
-    "print(f'There are {df[\"sentiment\"].nunique()} classes in this dataset')"
+    "print(f'There are {np.unique(labels).shape[0]} classes in this dataset')"
    ]
   },
   {
@@ -199,6 +207,28 @@
    "metadata": {},
    "source": [
     "## Q3.  Number of samples per class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 5287 examples of negative sentiment\n",
+      "There are 8816 examples of neutral sentiment\n",
+      "There are 6013 examples of positive sentiment\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values, occurCount = np.unique(labels, return_counts=True)\n",
+    "print(f'There are {occurCount[0]} examples of negative sentiment')\n",
+    "print(f'There are {occurCount[1]} examples of neutral sentiment')\n",
+    "print(f'There are {occurCount[2]} examples of positive sentiment')"
    ]
   },
   {
@@ -217,9 +247,9 @@
     }
    ],
    "source": [
-    "print(f'There are {df[\"sentiment\"].value_counts()[0]} examples of negative sentiment')\n",
-    "print(f'There are {df[\"sentiment\"].value_counts()[1]} examples of neutral sentiment')\n",
-    "print(f'There are {df[\"sentiment\"].value_counts()[2]} examples of positive sentiment')"
+    "# print(f'There are {df[\"sentiment\"].value_counts()[0]} examples of negative sentiment')\n",
+    "# print(f'There are {df[\"sentiment\"].value_counts()[1]} examples of neutral sentiment')\n",
+    "# print(f'There are {df[\"sentiment\"].value_counts()[2]} examples of positive sentiment')"
    ]
   },
   {
@@ -318,6 +348,37 @@
     "ax.set_title('Distribution of sample length')\n",
     "ax.set_xlabel('Number of words in a sample')\n",
     "ax.set_ylabel('Number of samples')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20087                                 yar spelling kesa theek hota wahan ja k bhi\n",
+       "19498                                         paen paihay guwach gye ne achasorry\n",
+       "19662                                                       hahaha teri bhabi hai\n",
+       "18265    mujhi cxn eid ty ehyo wathi aiyun ahin sunny wat athai k jo aa puro suit\n",
+       "17240                                                              kya ye sach hy\n",
+       "                                           ...                                   \n",
+       "7763                                           maze hain g apne pakistan main 😳 😜\n",
+       "15377                    allah pak ap ko lambi aur barkat wali zindgi atta farmay\n",
+       "17730                                                       idea ho gaya tha mjhe\n",
+       "15725                                                           ham sab k liy dua\n",
+       "19966                                                        han yar kash ho jata\n",
+       "Name: comment, Length: 20116, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenize_df"
    ]
   },
   {
